--- a/fullpage.html
+++ b/fullpage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>FullPage</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstarp.min.css">
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
